--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#features">Featured Solution</a>
           </li>                                
-          <li class="nav-item">
+         <--<li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#design">Design</a>
-          </li>
+          </li>  --/>
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#canvas">Lean Canvas</a>
           </li>
@@ -203,7 +203,7 @@
 
 
       <hr class="m-0">
-
+<!--div 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="design">
         <div class="my-auto">
           <h2 class="mb-5">How it works</h2>
@@ -219,7 +219,7 @@
             </div>
           </div>
 
-          <!--div class="resume-item d-flex flex-column flex-md-row mb-5"></div-->
+          class="resume-item d-flex flex-column flex-md-row mb-5">
           <div class="resume-item d-flex flex-column flex-md-row"> </div>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Mockup design</h3>
@@ -236,7 +236,7 @@
               </div>
         </div>
       </section>
-
+</div-->
       <hr class="m-0">
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="canvas">
