--- a/index.html
+++ b/index.html
@@ -59,9 +59,6 @@
             <a class="nav-link js-scroll-trigger" href="#design">Design</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#canvas">Lean Canvas</a>
-          </li>
-          <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#aboutTeam">About Us</a>
           </li>
         </ul>
@@ -139,16 +136,20 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Data Analysis</h3>
-                <iframe width="600" height="450" src="https://datastudio.google.com/embed/reporting/bc128cfb-91b6-409d-a62b-499892131c25/page/v9EBB" frameborder="0" style="border:0" allowfullscreen></iframe> 
+                  <ul>
+                <li>Make use of existing technologies.</li>
+                <li>Maximize efficiency.</li>
+                <li>Make use of non-productive hours.</li>
+                  </ul>  
             </div>
             <br><br>
 
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Summary</h3>
               <ul>
-                <li>Make use of non-productive hours.</li>
-                <li>Consumer engagement with ads.</li>
-                <li>Wasted / unused printed coupons.</li>
+                <li>Saves cost. Thru maximization of efforts.</li>
+                <li>Generates money.</li>
+                <li>More revenue.</li>
               </ul>  
             </div>            
           </div>
