--- a/index.html
+++ b/index.html
@@ -95,9 +95,9 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="problem">
         <div class="my-auto">
-          <h2 class="mb-5">Survey Results</h2>
+          <h2 class="mb-5">Problem</h2>
             <div class="resume-content mr-auto">
-              <h3 class="mb-0">Survey 1</h3>
+              
                 <div style="text-align:left">
                   <p class="lead mb-5">QA teams spend too much time writing/maintaining test cases — not analyzing results.</p>
                   <p class="lead mb-5">Automation can be brittle: flaky tests and coverage gaps slow releases.</p>
