--- a/index.html
+++ b/index.html
@@ -387,18 +387,18 @@
           <div class="resume-item d-flex flex-column flex-md-row mb-5">
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Ronnel Cuizon</h3>
-                <div class="subheading mb-3">Resource 1</div>
+                <div class="subheading mb-3">Developer</div>
             </div>
             <br><br>
 
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Gregorio Arena</h3>
-                <div class="subheading mb-3">Resource 2</div>
+                <div class="subheading mb-3">Developer</div>
             </div>
              <br><br>
             <div class="resume-content mr-auto">
               <h3 class="mb-0">Marion Frigillana</h3>
-                <div class="subheading mb-3">Resource 3</div>
+                <div class="subheading mb-3">Developer</div>
             </div>
           </div>
         </div>
