--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="sideNav">
       <a class="navbar-brand js-scroll-trigger" href="#page-top">
-        <span class="d-block d-lg-none">QA 
-          <span class="text-danger">Assist</span>
+        <span class="d-block d-lg-none">PS
+          <span class="text-danger">QA Assist</span>
         </span>
         <span class="d-none d-lg-block">
           <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profile.jpg" alt="">
